--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,14 @@
   <body>
    
     <div class="container">
-      <div class="row">
-        <div class="col-md-5 col-md-offset-3">
+      <div class="">
+        <div class="">
           <div id="root"></div>
         </div>
       </div>
     </div>
     
+
 
   </body>
 </html>
